@@ -88,7 +88,9 @@
 #define TRUE            1
 #define FALSE           0
 
+#ifndef __cplusplus
 typedef int bool;
+#endif
 
 FILE *in, *out;
 
