@@ -73,7 +73,7 @@ AC_ARG_WITH(gmp,
                   [supply arguments for configuring GMP library]),
   [], [with_gmp=""])
 
-AC_ARG_WITH(gmp,
+AC_ARG_WITH(C-gmp,
   AS_HELP_STRING( [--with-C-gmp=args],
                   [configure GMP without in portable C]),
   [with_c_gmp=yes; with_system_gmp=no], [with_c_gmp=no])
@@ -381,7 +381,7 @@ dnl ----------------------------------------------------------------------
 dnl Configure local GMP if needed
 AC_SUBST(ECL_GMP_HEADER)
 EXTRA_OBJS="${EXTRA_OBJS} big.o"
-if test "${with_system_gmp}" = "no" ; then
+if test "x${with_system_gmp}" = "xno" ; then
   AC_MSG_NOTICE(Configuring included GMP library:)
   test -d gmp && rm -rf gmp
   if test -z "$gmp_build"; then
@@ -706,7 +706,7 @@ AC_CHECK_FUNCS( [expf logf sqrtf cosf sinf tanf sinhf coshf tanhf] \
 		[floorf ceilf fabsf frexpf ldexpf log1p log1pf log1pl] \
                 [copysign] )
 
-AC_CHECK_FUNCS( [sched_yield uname fseeko] )
+AC_CHECK_FUNCS( [sched_yield uname fseeko dladdr backtrace backtrace_symbols] )
 
 AC_CHECK_HEADER( [sys/mman.h], AC_DEFINE(ECL_USE_MPROTECT) )
 
@@ -738,6 +738,7 @@ if test ! ${opcode8} = "no" ; then
              [Bytecodes and arguments are 8 and 16 bits large, respectively])
 fi
 
+ECL_GCC_BACKTRACE
 ECL_LIBATOMIC_OPS
 ECL_BOEHM_GC
 
