@@ -289,10 +289,10 @@ extern ECL_API ecl_frame_ptr _ecl_frs_push(register cl_env_ptr, register cl_obje
 #define return0()	return ((NVALUES = 0),Cnil)
 #define return1(x)	return ((VALUES(0)=(x)),(NVALUES=1),VALUES(0))
 #define returnn(x)	return x
-#define ecl_return0(env,x) \
-	do { (env)->nvalues = 0; return Cnil; } while (1)
+#define ecl_return0(env) \
+	do { (env)->nvalues = 0; return Cnil; } while (0)
 #define ecl_return1(env,x) \
-	do { cl_object __aux = (x); (env)->nvalues = 0; return __aux; } while (1)
+	do { cl_object __aux = (x); (env)->nvalues = 0; return __aux; } while (0)
 
 /*****************************
  * LEXICAL ENVIRONMENT STACK
